k8s/logging/kibana-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kibana-auth
  namespace: logging
spec:
  forwardAuth:
    address: http://oauth2-proxy.logging.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
