k8s/logging/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: logging
spec:
  ingressClassName: traefik
  rules:
    - host: elasticsearch.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master
                port:
                  number: 9200
